server/vm-k8s/k8s/overlay/prod/changedetection/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: changedetection
spec:
  entryPoints:
    - internal
  routes:
    - kind: Rule
      match: Host(`changedetection.i.morawskim.pl`)
      services:
        - kind: Service
          name: changedetection
          port: 80
      middlewares:
        - name: openid-auth
        - name: add-x-forwarded-proto
